# football-commentator

./: .gitignore  .pre-commit-config.yaml  README.md  example.env  match_metadata_template.yaml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: main.yml
src/football_commentator/: constants.py  event.py  llm.py  match_info.py  prompt.py  utils.py
src/football_commentator/app/: app.py  main.py
src/football_commentator/data/: preprocessor.py  preprocessor_json.py
tests/: test_data_models.py
